Fix documentation typos

--- a/documentation/bmc.tex
+++ b/documentation/bmc.tex
@@ -45,11 +45,11 @@ be applied when I recompiled, \emph{as well} as make initial configuration
 greatly simplified --- I couldn't see a reason not to do it.
 
 This class is very much written with my personal taste, and specific use case in mind.
-While I try to keep things general it is very much built around my particular perspective.
+While I try to keep things general, it is very much built around my particular perspective.
 As such it is reasonable to think that to the community as a whole the
 self-importance in the name is a tad exaggerated or undeserved.
 Considering that is also designed to not just convey information but also
-designed to visually impress, the tagline `Pretentiousness given form''
+designed to visually impress, the tagline `Pretentiousness given form'
 seems somewhat appropriate.
 
 I'm pleased to say that I consider this a project a success (in those respects).
@@ -1077,7 +1077,7 @@ successfully indicate aesthetic difference. Performance of creative cognitive ta
 after reading a document, and subconscious activation of the facial muscle
 responsible for frowning. For both measures a method that had \(p=0.04\) was yielded.
 It is rather interesting that they found that improved typography reduced frowning
-and and improved creative cognitive task performance.
+and improved creative cognitive task performance.
 
 Semantic associations between the typeface chosen and the content also seem to be
 important. \cite{web_chooserightfont} appears to give a good overview of this.
@@ -1085,7 +1085,7 @@ important. \cite{web_chooserightfont} appears to give a good overview of this.
 \subsection{The Elements of Typographic Style}
 While, as demonstrated previously, there are \textit{some} studies about typefaces,
 they are few and far between, done on a small scale, and rarely reproduced.
-Hence one of the best resources for typographic guidances is eminent publications
+Hence, one of the best resources for typographic guidances is eminent publications
 on the matter. \citetitle{Bringhurst_2004} is one of the foremost books, widely held
 in high esteem. Reading through it there a several useful suggestions which I have
 tried to implement here.
@@ -1105,17 +1105,17 @@ text, use spaced small caps'}.
 With regard to tables
 \begin{enumerate}
     \item Avoid shrinking font size
-    \item Minimise `furniture' (rules,boxes,dots, etc.)
+    \item Minimise `furniture' (rules, boxes, dots, etc.)
     \item Rules / tint blocks, when absolutely necessary, should run in the
     reading direction
-    \item Rules along the (vertical) outside of the table are useless
+    \item Rules along the (vertical) outside the table are useless
     \item Ensure sufficient white space is maintained
 \end{enumerate}
 
 \paragraph{Conclusions from \P~4.5.1}
 Short texts, such as research papers generally don't benefit from much padding
 at the start and end. The same does \emph{not} apply to books.
-As such \gls{bmc} implements two \mintinline{tex}{\maketitle}s.
+As such, \gls{bmc} implements two \mintinline{tex}{\maketitle}s.
 The default full page one seen on this document, and a shorter one used when the
 \mintinline{tex}{article} option is passed to the class.
 
@@ -1131,7 +1131,7 @@ Line-end hyphens best lie in the right margin. This is achieved by use of the
 It seems that emotional colour associations are not universal (\cite{Laurence1991}),
 and it seems like much of the clamour about colour psychology which is presented
 authoritatively, really has little factual basis, as covered by~\cite{OConnnor2011}.
-however I mainly care about the western european perspective, which I think is
+However I mainly care about the western european perspective, which I think is
 the most heavily studied, so we should be alright.
 
 Looking online I saw a lot of self-professed ``colour-gurus'', the first
