Fix bug in \dv[n]{x} definition

--- a/bmc-maths.sty
+++ b/bmc-maths.sty
@@ -63,7 +63,7 @@
       \IfNoValueTF{#1}{%
         \frac{\dd}{\dd #2}%
       }{%
-        \frac{\dd}{\dd #2^{#1}}%
+        \frac{\dd^{#1}}{\dd #2^{#1}}%
       }%
     }%
   }%
