--- a/bmc-sectioning.sty
+++ b/bmc-sectioning.sty
@@ -287,15 +287,28 @@
 	\addtokomafont{pagenumber}{\fontfamily{\headingsFont}\fontseries{sb}\selectfont\color{primary}}
 
 	% shift the predefined head layers
-	\ForEachLayerOfPageStyle*{scrheadings}{%
-	\ifstrstart{#1}{scrheadings.head.}
-		{\ModifyLayer[addvoffset=-.5in-.5\voffset-.5\topmargin]{#1}}
-		{}%
-	}
-	\ForEachLayerOfPageStyle*{plain.scrheadings}{%
-	\ifstrstart{#1}{plain.scrheadings.head.}
-		{\ModifyLayer[addvoffset=-.5in-.5\voffset-.5\topmargin]{#1}}
-		{}%
+	\ifbool{bmc@print}{
+		\ForEachLayerOfPageStyle*{scrheadings}{%
+		\ifstrstart{#1}{scrheadings.head.}
+			{\ModifyLayer[addvoffset=-.45in-.5\voffset-.5\topmargin]{#1}}
+			{}%
+		}
+		\ForEachLayerOfPageStyle*{plain.scrheadings}{%
+		\ifstrstart{#1}{plain.scrheadings.head.}
+			{\ModifyLayer[addvoffset=-.45in-.5\voffset-.5\topmargin]{#1}}
+			{}%
+		}
+	}{
+		\ForEachLayerOfPageStyle*{scrheadings}{%
+		\ifstrstart{#1}{scrheadings.head.}
+			{\ModifyLayer[addvoffset=-.5in-.5\voffset-.5\topmargin]{#1}}
+			{}%
+		}
+		\ForEachLayerOfPageStyle*{plain.scrheadings}{%
+		\ifstrstart{#1}{plain.scrheadings.head.}
+			{\ModifyLayer[addvoffset=-.5in-.5\voffset-.5\topmargin]{#1}}
+			{}%
+		}
 	}
 
 	% Defining the Layer
