Tweak xcolor options

--- a/bmc-color.sty
+++ b/bmc-color.sty
@@ -14,6 +14,7 @@
 \ifdefined\@bmc\else
     \RequirePackage{etoolbox}
     \RequirePackage{kvoptions}
+    \RequirePackage[dvipsnames,svgnames,table,hyperref]{xcolor}
 
     \SetupKeyvalOptions{family=bmc, prefix=bmc@}
     \DeclareStringOption[de]{palette}
