--- a/infoBulle.sty
+++ b/infoBulle.sty
@@ -40,7 +40,7 @@
 \RequirePackage{pgfopts}
 % \RequirePackage{fontspec}
 \RequirePackage{calc}
-\RequirePackage[usenames,dvipsnames,svgnames]{xcolor}
+\RequirePackage[dvipsnames,svgnames,table,hyperref]{xcolor}
 % \RequirePackage{translations}
 \RequirePackage{mdframed}
 \RequirePackage{listings}
