Add generic maths box

--- a/bmc-boxes.sty
+++ b/bmc-boxes.sty
@@ -130,6 +130,7 @@
 \newBmcBox{tip}{tipColor}{Tip}[tip][\faLightbulb]
 
 \newcommand{\bmcBoxMathIcon}{\fontsize{.6cm}{.72cm}\selectfont$\pi$}
+\newBmcBox{maths}{mathematicalColor}{Maths}[mth][\bmcBoxMathIcon]
 \newBmcBox{proof}{mathematicalColor}{Proof}[prf][\bmcBoxMathIcon]
 \newBmcBox{theorem}{mathematicalColor}{Theorem}[thr][\bmcBoxMathIcon]
 \newBmcBox{lemma}{mathematicalColor}{Lemma}[lem][\bmcBoxMathIcon]
