--- a/bmc-maths.sty
+++ b/bmc-maths.sty
@@ -48,19 +48,25 @@
 
 % commonly used macros
 %  - differentials
-\newsavebox\diffdbox
-\newcommand{\slantedromand}{{\mathpalette\makesl{d}}}
-\newcommand{\makesl}[2]{%
-  \begingroup
-  \sbox{\diffdbox}{$\mathsurround=0pt#1\mathrm{#2}$}%
-  \pdfsave
-  \pdfsetmatrix{1 0 0.2 1}%
-  \rlap{\usebox{\diffdbox}}%
-  \pdfrestore
-  \hskip\wd\diffdbox
-  \endgroup
-}
-\newcommand{\dd}[1][]{\ensuremath{\mathop{}\!\ifstrempty{#1}{\slantedromand\@ifnextchar^{\hspace{0.2ex}}{\hspace{0.1ex}}}{\slantedromand\hspace{0.2ex}^{#1}}}}
+\ifbmc@plainmathsdd
+  \newcommand{\dd}[1][]{\ensuremath{\,\mathsl{d}^{#1}}}
+\else
+  \newsavebox\diffdbox
+  \newcommand{\slantedromand}{{\mathpalette\makesl{d}}}
+  \newcommand{\makesl}[2]{%
+    \begingroup
+    \sbox{\diffdbox}{$\mathsurround=0pt#1\mathrm{#2}$}%
+    \pdfsave
+    \pdfsetmatrix{1 0 0.2 1}%
+    \rlap{\usebox{\diffdbox}}%
+    \pdfrestore
+    \hskip\wd\diffdbox
+    \endgroup
+  }
+  \newcommand{\dd}[1][]{\ensuremath{\mathop{}\!\ifstrempty{#1}{%
+        \slantedromand\@ifnextchar^{\hspace{0.2ex}}{\hspace{0.1ex}}}%
+      {\slantedromand\hspace{0.2ex}^{#1}}}}
+\fi
 \ProvideDocumentCommand\dv{o m g}{%
   \ensuremath{%
     \IfValueTF{#3}{%
