--- a/infoBulle.sty
+++ b/infoBulle.sty
@@ -1,4 +1,5 @@
 
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %																			   %
 %																			   %
@@ -8,7 +9,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-% Copyright Yves Zumbach 2017
+% Copyright Harvey Sheppard 2021
 %-------------------------------------------------------------------------------
 
 % This work is distributed under the LPPL
@@ -23,10 +24,8 @@
 % version 2005/12/01 or later.
 %
 % This work has the LPPL maintenance status `maintained'.
-%
+% 
 % The Current Maintainer of this work is Yves Zumbach
-
-% This work has been modified by tecosaur (https://github.com/tecosaur) for use with the file bmc.cls
 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{infoBulle}[2017/02/17 The infoBulle package typeset flat informational boxes, by Yves ZUMBACH]
@@ -38,17 +37,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \RequirePackage{pgfopts}
-% \RequirePackage{fontspec}
+\RequirePackage{fontspec}
 \RequirePackage{calc}
-\RequirePackage[dvipsnames,svgnames,table,hyperref]{xcolor}
-% \RequirePackage{translations}
+\RequirePackage[usenames,dvipsnames,svgnames]{xcolor}
+\RequirePackage{translations}
 \RequirePackage{mdframed}
 \RequirePackage{listings}
 \RequirePackage{xparse}
+\RequirePackage{ragged2e}
+\RequirePackage{pgfkeys}
 \RequirePackage{tikz}
 \usetikzlibrary{calc}
-\RequirePackage{interfaces-base}
-\LoadInterface{pgfkeys}
 
 \RequirePackage{yMainColor}
 
@@ -63,8 +62,7 @@
 \newif\ifinfoBulleMath
 \pgfkeys{
 	/infoBulle/.cd,
-	mathInfoBulle/.true = {\infoBulleMathtrue},
-	mathInfoBulle/.false = {\infoBulleMathfalse},
+	mathInfoBulle/.is if=infoBulleMath,
 	mathInfoBulle = true,
 }
 
@@ -81,8 +79,7 @@
 \newif\ifinfoBulleMarginIcons
 \pgfkeys{
 	/infoBulle/.cd,
-	marginIcons/.true = {\infoBulleMarginIconstrue},
-	marginIcons/.false = {\infoBulleMarginIconsfalse},
+	marginIcons/.is if=infoBulleMarginIcons,
 	marginIcons = false,
 }
 
@@ -90,8 +87,7 @@
 %-------------------------------------------------------------------------------
 \pgfkeys{
 	/infoBulle/icon/.cd,
-	radius/.store as dimen,
-	radius = 3.5mm,
+	radius/.initial=3.5mm,
 }
 
 % Icon Shape
@@ -99,9 +95,20 @@
 \pgfkeys{
 	/infoBulle/icon/.cd,
 	shape/.is choice,
-	shape/round/.style = {/infoBulle/icon/radius = 3.5mm, /infoBulle/icon/shapeCommand/.code n args = {3}{\fill[##3] (##1) circle (##2);}},
-	shape/hexagon/.style = {/infoBulle/icon/radius = 4mm, /infoBulle/icon/shapeCommand/.code n args = {3}{\infoBulle@hexagon{##1}{##2}[##3, rotate=90];}},
+	shape/round/.style = {
+		/infoBulle/icon/radius = 3.5mm,
+		/infoBulle/icon/shapeCommand/.code n args = {3}{\fill[##3] (##1) circle (##2);}},
+	shape/hexagon/.style = {
+		/infoBulle/icon/radius = 4mm,
+		/infoBulle/icon/shapeCommand/.code n args = {3}{\infoBulle@hexagon{##1}{##2}[##3, rotate=90];}},
 	shape/round,
+}
+
+% Text Alignment
+%-------------------------------------------------------------------------------
+\pgfkeys{
+	/infoBulle/.cd,
+	text alignment/.code = {\RaggedRight}
 }
 
 \ProcessPgfPackageOptions{/infoBulle}
@@ -112,10 +119,10 @@
 %		Font Configuration
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% \setfontfamily{\FA}{Font Awesome 5 Free Regular}
-% \setfontfamily{\FASolid}{Font Awesome 5 Free Solid}
+\setfontfamily{\FA}{Font Awesome 5 Free Regular}
+\setfontfamily{\FASolid}{Font Awesome 5 Free Solid}
 
-\usepackage{fontawesome5}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %		Colors
@@ -126,8 +133,7 @@
 \definecolor{informationColor}{RGB}{139, 195, 74}
 \definecolor{checkColor}{RGB}{3, 169, 244}
 \definecolor{warningColor}{RGB}{255, 165, 0}
-\definecolor{tipColor}{RGB}{142, 68, 173}
-\definecolor{exampleColor}{RGB}{156, 39, 176}
+\definecolor{tipsColor}{RGB}{142, 68, 173}
 \definecolor{mathematicalColor}{RGB}{230, 126, 34}
 \colorlet{codeColor}{Grey}
 
@@ -148,9 +154,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % infoBulle basic configuration
-\colorlet{infoBulleBackground}{lightGrey}
-\colorlet{infoBulleText}{black}
-
 \mdfdefinestyle{infoBulle}
 {
 	skipabove=\baselineskip,
@@ -165,13 +168,9 @@
 	topline=false,
 	bottomline=false,
 	linewidth=1mm,
-	backgroundcolor=infoBulleBackground,
-	fontcolor=infoBulleText,
-	frametitlefontcolor=infoBulleText,
+	backgroundcolor=lightGrey,
 	frametitlebelowskip=0mm,
 	frametitleaboveskip=4mm,
-	splittopskip=2\topsep,
-	needspace=6em
 }
 \newmdenv[
 	style=infoBulle,
@@ -190,7 +189,6 @@
 \setlength{\yIconHorizontalOffset}{.73cm}
 % General Command
 \DeclareDocumentCommand{\@titleContent}{m m m}{%
-	\fontfamily{\headingsFont}\selectfont
 	\ifinfoBulleMarginIcons
 		\llap{#2\hspace*{\yIconHorizontalOffset}}%
 		\mbox{}%
@@ -198,7 +196,7 @@
 	\else
 		\@afterindentfalse\@afterheading%
 		\mbox{}%
-		\parbox[t][2\pgfkeysvalueof{/infoBulle/icon/radius}]{.75cm}{%
+		\parbox[t]{.75cm}{%
 			\@afterindentfalse\@afterheading%
 			\mbox{}%
 			#2%
@@ -220,11 +218,6 @@
 	\@titleContentTwoPart{mathematicalColor}{\mathematicalIcon}{#1 \arabic{\infoBulle@mathCounterReset}.#2}{#3}%
 }
 
-% Command for example title
-\DeclareDocumentCommand{\@titleContentExample}{m m m}{%
-	\@titleContentTwoPart{exampleColor}{\exampleIcon}{#1 \arabic{\infoBulle@mathCounterReset}.#2}{#3}%
-}
-
 % infoBulle skeleton
 % The little mess with lengths allow to keep the same parindent and parskip inside the infoBulle (this is a little bug from mdframed)
 \newlength{\tempparindent}
@@ -235,8 +228,9 @@
 	\begin{infoBulle}[linecolor=#1, frametitle=\@titleContent{#1}{#2}{#3}]%
 		\setlength{\parindent}{\tempparindent}%
 		\setlength{\parskip}{\tempparskip}%
-	}{%
-\end{infoBulle}%
+		\pgfkeys{/infoBulle/text alignment}%
+}{%
+	\end{infoBulle}%
 }
 \DeclareDocumentCommand{\@infoBulleSkeleton}{m m m +m}{
 	\begin{@infoBulleSkeletonEnv}{#1}{#2}{#3}
@@ -254,7 +248,7 @@
 % infoInfo
 %-------------------------------------------------------------------------------
 \newcommand{\infoIcon}{%
-	\infoBulleAbstractIcon{informationColor}{\faInfo}
+	\infoBulleAbstractIcon{informationColor}{\FASolid\symbol{"F129}}
 }
 \DeclareDocumentCommand{\infoInfo}{m +m}{\@infoBulleSkeleton{informationColor}{\infoIcon}{#1}{#2}}
 \NewDocumentEnvironment{InfoInfo}{m}
@@ -265,7 +259,7 @@
 % warningInfoexclamation
 %-------------------------------------------------------------------------------
 \newcommand{\warningIcon}{%
-	\infoBulleAbstractIcon{warningColor}{\faExclamation}
+	\infoBulleAbstractIcon{warningColor}{\FASolid\symbol{"F12A}}
 }
 \DeclareDocumentCommand{\warningInfo}{m +m}{\@infoBulleSkeleton{warningColor}{\warningIcon}{#1}{#2}}
 \NewDocumentEnvironment{WarningInfo}{m}
@@ -276,7 +270,7 @@
 % criticalInfo
 %-------------------------------------------------------------------------------
 \newcommand{\criticalIcon}{%
-	\infoBulleAbstractIcon{criticalColor}{\faTimes}
+	\infoBulleAbstractIcon{criticalColor}{\FASolid\symbol{"F00D}}
 }
 \DeclareDocumentCommand{\criticalInfo}{m +m}{\@infoBulleSkeleton{criticalColor}{\criticalIcon}{#1}{#2}}
 \NewDocumentEnvironment{CriticalInfo}{m}
@@ -287,7 +281,7 @@
 % checkInfo
 %-------------------------------------------------------------------------------
 \newcommand{\checkIcon}{%
-	\infoBulleAbstractIcon{checkColor}{\faCheck}
+	\infoBulleAbstractIcon{checkColor}{\FASolid\symbol{"F00C}}
 }
 \DeclareDocumentCommand{\checkInfo}{m +m}{\@infoBulleSkeleton{checkColor}{\checkIcon}{#1}{#2}}
 \NewDocumentEnvironment{CheckInfo}{m}
@@ -298,7 +292,7 @@
 % questionInfo
 %-------------------------------------------------------------------------------
 \newcommand{\questionIcon}{%
-	\infoBulleAbstractIcon{questionColor}{\faQuestion}
+	\infoBulleAbstractIcon{questionColor}{\FASolid\symbol{"F128}}
 }
 \DeclareDocumentCommand{\questionInfo}{m +m}{\@infoBulleSkeleton{questionColor}{\questionIcon}{#1}{#2}}
 \NewDocumentEnvironment{QuestionInfo}{m}
@@ -306,20 +300,20 @@
 	{\end{@infoBulleSkeletonEnv}}
 
 
-% tipInfo
+% tipsInfo
 %-------------------------------------------------------------------------------
-\newcommand{\tipIcon}{%
-	\infoBulleAbstractIcon{tipColor}{\faLightbulb}
+\newcommand{\tipsIcon}{%
+	\infoBulleAbstractIcon{tipsColor}{\FA\symbol{"F0EB}}
 }
-\DeclareDocumentCommand{\tipInfo}{m +m}{\@infoBulleSkeleton{tipColor}{\tipIcon}{#1}{#2}}
-\NewDocumentEnvironment{TipInfo}{m}
-{\begin{@infoBulleSkeletonEnv}{tipColor}{\tipIcon}{#1}}
+\DeclareDocumentCommand{\tipsInfo}{m +m}{\@infoBulleSkeleton{tipsColor}{\tipsIcon}{#1}{#2}}
+\NewDocumentEnvironment{TipsInfo}{m}
+{\begin{@infoBulleSkeletonEnv}{tipsColor}{\tipsIcon}{#1}}
 	{\end{@infoBulleSkeletonEnv}}
 
 % codeInfo
 %-------------------------------------------------------------------------------
 \newcommand{\codeIcon}{%
-	\infoBulleAbstractIcon{Grey}{\faCode}
+	\infoBulleAbstractIcon{Grey}{\FASolid\symbol{"F121}}
 }
 \lstnewenvironment{CodeInfoLst}[1][Python]
 {
@@ -338,7 +332,7 @@
 		commentstyle=\color{LimeGreen},
 		keywordstyle=\color{BurntOrange}\bfseries,
 		stringstyle=\color{WildStrawberry},
-		% keywords={var, func, extends},
+		keywords={var, func, extends},
 		frame=leftline,
 		framesep=0mm,
 		xleftmargin=0mm,% marge ajouté à gauche du tableau (à configurer en dernier pour l'alignement global du tableau)
@@ -360,23 +354,7 @@
 	\end{@infoBulleSkeletonEnv}
 }
 
-% exampleInfo
-%-------------------------------------------------------------------------------
-\newcommand{\exampleIcon}{%
-	\infoBulleAbstractIcon{exampleColor}{\faClipboard}
-}
 
-\newcounter{example}[\infoBulle@mathCounterReset]
-\NewDocumentEnvironment{example}{o}{%
-	\stepcounter{example}%
-	\begin{mdframed}[%
-		style=infoBulle,
-		linecolor=exampleColor,
-		frametitle=\@titleContentExample{Example}{\theexample}{#1}
-		]\relax%
-}{%
-	\end{mdframed}%
-}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %		User Math Commands
@@ -391,35 +369,18 @@
 	\infoBulleAbstractIcon{mathematicalColor}{\fontsize{.6cm}{.72cm}\selectfont$\pi$}%
 }
 
-% Proof commands
-%-------------------------------------------------------------------------------
-% \NewTranslation{english}{proposition}{Proof}
-% \NewTranslation{french}{proposition}{Proof}
-% \NewTranslation{german}{proposition}{Vorschlag}
-\newcounter{proof}[\infoBulle@mathCounterReset]
-\NewDocumentEnvironment{proof}{o}{%
-	\stepcounter{proof}%
-	\begin{mdframed}[%
-		style=infoBulle,
-		linecolor=mathematicalColor,
-		frametitle=\@titleContentMath{proof}{\theproof}{#1}
-		]\relax%
-}{%
-	\end{mdframed}%
-}
-
 % Theorem commands
 %-------------------------------------------------------------------------------
-% \NewTranslation{english}{theorem}{Theorem}
-% \NewTranslation{french}{theorem}{Théorème}
-% \NewTranslation{german}{theorem}{Lehrsatz}
+\NewTranslation{english}{theorem}{Theorem}
+\NewTranslation{french}{theorem}{Théorème}
+\NewTranslation{german}{theorem}{Lehrsatz}
 \newcounter{theorem}[\infoBulle@mathCounterReset]
 \NewDocumentEnvironment{theorem}{o}{%
 	\stepcounter{theorem}%
 	\begin{mdframed}[%
 		style=infoBulle,
 		linecolor=mathematicalColor,
-		frametitle=\@titleContentMath{theorem}{\thetheorem}{#1}
+		frametitle=\@titleContentMath{\GetTranslation{theorem}}{\thetheorem}{#1}
 		]\relax%
 	}{%
 \end{mdframed}%
@@ -427,16 +388,16 @@
 
 % Lemma commands
 %-------------------------------------------------------------------------------
-% \NewTranslation{english}{lemma}{Lemma}
-% \NewTranslation{french}{lemma}{Lemme}
-% \NewTranslation{german}{lemma}{Lemma}
+\NewTranslation{english}{lemma}{Lemma}
+\NewTranslation{french}{lemma}{Lemme}
+\NewTranslation{german}{lemma}{Lemma}
 \newcounter{lemma}[\infoBulle@mathCounterReset]
 \NewDocumentEnvironment{lemma}{o}{%
 	\stepcounter{lemma}%
 	\begin{mdframed}[%
 		style=infoBulle,
 		linecolor=mathematicalColor,
-		frametitle=\@titleContentMath{lemma}{\thelemma}{#1}
+		frametitle=\@titleContentMath{\GetTranslation{lemma}}{\thelemma}{#1}
 		]\relax%
 	}{%
 \end{mdframed}%
@@ -444,16 +405,16 @@
 
 % Corollary commands
 %-------------------------------------------------------------------------------
-% \NewTranslation{english}{corollary}{Corollary}
-% \NewTranslation{french}{corollary}{Corollaire}
-% \NewTranslation{german}{corollary}{Folge}
+\NewTranslation{english}{corollary}{Corollary}
+\NewTranslation{french}{corollary}{Corollaire}
+\NewTranslation{german}{corollary}{Folge}
 \newcounter{corollary}[\infoBulle@mathCounterReset]
 \NewDocumentEnvironment{corollary}{o}{%
 	\stepcounter{corollary}%
 	\begin{mdframed}[%
 		style=infoBulle,
 		linecolor=mathematicalColor,
-		frametitle=\@titleContentMath{corollary}{\thecorollary}{#1}
+		frametitle=\@titleContentMath{\GetTranslation{corollary}}{\thecorollary}{#1}
 		]\relax%
 	}{%
 \end{mdframed}%
@@ -461,16 +422,16 @@
 
 % Definition commands
 %-------------------------------------------------------------------------------
-% \NewTranslation{english}{definition}{Definition}
-% \NewTranslation{french}{definition}{Définition}
-% \NewTranslation{german}{definition}{Definition}
+\NewTranslation{english}{definition}{Definition}
+\NewTranslation{french}{definition}{Définition}
+\NewTranslation{german}{definition}{Definition}
 \newcounter{definition}[\infoBulle@mathCounterReset]
 \NewDocumentEnvironment{definition}{o}{%
 	\stepcounter{definition}%
 	\begin{mdframed}[%
 		style=infoBulle,
 		linecolor=mathematicalColor,
-		frametitle=\@titleContentMath{definition}{\thedefinition}{#1}
+		frametitle=\@titleContentMath{\GetTranslation{definition}}{\thedefinition}{#1}
 		]\relax%
 	}{%
 \end{mdframed}%
@@ -478,16 +439,16 @@
 
 % Axiom commands
 %-------------------------------------------------------------------------------
-% \NewTranslation{english}{axiom}{Axiom}
-% \NewTranslation{french}{axiom}{Axiome}
-% \NewTranslation{german}{axiom}{Axiom}
+\NewTranslation{english}{axiom}{Axiom}
+\NewTranslation{french}{axiom}{Axiome}
+\NewTranslation{german}{axiom}{Axiom}
 \newcounter{axiom}[\infoBulle@mathCounterReset]
 \NewDocumentEnvironment{axiom}{o}{%
 	\stepcounter{axiom}%
 	\begin{mdframed}[%
 		style=infoBulle,
 		linecolor=mathematicalColor,
-		frametitle=\@titleContentMath{axiom}{\theaxiom}{#1}
+		frametitle=\@titleContentMath{\GetTranslation{axiom}}{\theaxiom}{#1}
 		]\relax%
 	}{%
 \end{mdframed}%
@@ -495,16 +456,16 @@
 
 % Proposition commands
 %-------------------------------------------------------------------------------
-% \NewTranslation{english}{proposition}{Proposition}
-% \NewTranslation{french}{proposition}{Proposition}
-% \NewTranslation{german}{proposition}{Vorschlag}
+\NewTranslation{english}{proposition}{Proposition}
+\NewTranslation{french}{proposition}{Proposition}
+\NewTranslation{german}{proposition}{Vorschlag}
 \newcounter{proposition}[\infoBulle@mathCounterReset]
 \NewDocumentEnvironment{proposition}{o}{%
 	\stepcounter{proposition}%
 	\begin{mdframed}[%
 		style=infoBulle,
 		linecolor=mathematicalColor,
-		frametitle=\@titleContentMath{proposition}{\theproposition}{#1}
+		frametitle=\@titleContentMath{\GetTranslation{proposition}}{\theproposition}{#1}
 		]\relax%
 }{%
 	\end{mdframed}%
@@ -538,3 +499,4 @@
 
 
 \endinput
+
